vortex-bench/src/snapshots/vortex_bench__v3__tests__snapshot_compression_size.snap
---
source: vortex-bench/src/v3.rs
expression: render(&record)
---
{
  "kind": "compression_size",
  "commit_sha": "<commit-sha>",
  "dataset": "taxi",
  "format": "lance",
  "value_bytes": 12345678,
  "uncompressed_bytes": 98765432
}
